[package]
name = "tricoder"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
trust-dns-resolver = "0.21"

[dev-dependencies]
anyhow = "1"
structopt = "0.3"
